@@ -63,6 +63,7 @@ void fin_syslog(void);
 void init_verbose(int level);
 void init_test(int level);
 void init_partial(int level);
+void init_md_filtering(int level);
 void init_pvmove(int level);
 void init_debug(int level);
 void init_cmd_name(int status);
@@ -75,6 +76,7 @@ void set_cmd_name(const char *cmd_name);
 
 int test_mode(void);
 int partial_mode(void);
+int md_filtering(void);
 int pvmove_mode(void);
 int debug_level(void);
 int ignorelockingfailure(void);
